src/test/deca/syntax/invalid/obtained_res/wrongIfBlocksynt.res
./src/test/deca/syntax/invalid/created/ifThenElse/wrongIfBlock.deca:10:0: missing '{' at '}'
